SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval__c/CPQ_Quote_Approval__c.object-meta.xml
<CustomObject>
    <description>Quote level approval for CPQ Playbook Approval</description>
    <label>CPQ Quote Approval</label>
    <nameField>
        <label>CPQ Quote Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Quote Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>