SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval__c/fields/CPQ_Playbook_Approval__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Approval__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CPQ Playbook Approval for which the record tracks progress for the quote</description>
    <label>CPQ Playbook Approval</label>
    <referenceTo>CPQ_Playbook_Approval__c</referenceTo>
    <relationshipLabel>CPQ Quote Approvals</relationshipLabel>
    <relationshipName>CPQ_Quote_Approvals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>