SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval__c/fields/Notes_for_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Approvers__c</fullName>
    <description>Notes/Justification submitted to approver(s)</description>
    <inlineHelpText></inlineHelpText>
    <label>Notes for Approver(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>