SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Quote_Approval__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <description>Parent Quote record</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>CPQ Quote Approvals</relationshipLabel>
    <relationshipName>CPQ_Quote_Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>